<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/foam">


    <EditText
        android:id="@+id/studentname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:hint="@string/student_name" />

    <Spinner
        android:id="@+id/priorityspinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:prompt="@string/priority"/>


    <EditText
        android:id="@+id/waitingcourse"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="10dp"
        android:hint="@string/enter_course_waiting_for" />


    <Button
        android:id="@+id/btn_addstudent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/add_student"
        android:textAllCaps="false"
        android:backgroundTint="@color/dark_blue"/>

    <Button
        android:id="@+id/btn_editstudent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/edit_student"
        android:textAllCaps="false"
        android:backgroundTint="@color/dark_blue"/>

    <Button
        android:id="@+id/btn_removestudent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/remove_student"
        android:textAllCaps="false"
        android:backgroundTint="@color/dark_blue"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp"/>
    </FrameLayout>

</LinearLayout>
